<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_import_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:background="@drawable/bg_button"
            android:text="@string/import_file"
            android:textColor="@color/text_primary"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_import_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:background="@drawable/bg_button"
            android:text="@string/import_folder"
            android:textColor="@color/text_primary"
            android:textSize="15sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="60dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/empty_library"
        android:textColor="@color/text_hint"
        android:textSize="15sp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        android:overScrollMode="never"
        android:scrollingCache="false"
        android:animationCache="false"/>
</LinearLayout>
